# nRF5-SDK-cmake

./: add-include-dirs.cmake  compiler-gcc.cmake  functions.cmake  install.cmake  libs-build-deps.cmake  libs-resolve-deps.cmake  link.cmake  list-modules.cmake  sdk-gcc.cmake
components/: add-include-dirs.cmake  libs-build-deps.cmake  libs-resolve-deps.cmake
components/ant/: add-include-dirs.cmake
components/ant/ant_profiles/: add-include-dirs.cmake
components/ble/: add-include-dirs.cmake  libs-build-deps.cmake  libs-resolve-deps.cmake
components/ble/ble_services/: libs-build-deps.cmake  libs-resolve-deps.cmake
components/drivers_ext/: add-include-dirs.cmake  libs-build-deps.cmake  libs-resolve-deps.cmake
components/drivers_nrf/: add-include-dirs.cmake  libs-build-deps.cmake  libs-resolve-deps.cmake
components/drivers_nrf/hal/: nrf_peripherals.h
components/experimental_802_15_4/: add-include-dirs.cmake
components/iot/: add-include-dirs.cmake
components/libraries/: add-include-dirs.cmake  libs-build-deps.cmake  libs-resolve-deps.cmake
components/nfc/: add-include-dirs.cmake  libs-build-deps.cmake  libs-resolve-deps.cmake
components/serialization/: add-include-dirs.cmake
components/softdevice/common/: nrf_sdh_freertos.c
components/toolchain/gcc/: Makefile.posix  gcc_nrf52.ld  gcc_nrf52810_xxaa_nosd.ld  gcc_nrf52810_xxaa_s112.ld  gcc_nrf52832_xxaa_nosd.ld  gcc_nrf52832_xxaa_s132.ld  gcc_nrf52832_xxaa_s212.ld  gcc_nrf52832_xxaa_s332.ld  gcc_nrf52832_xxab_nosd.ld  gcc_nrf52832_xxab_s132.ld  gcc_nrf52832_xxab_s212.ld  gcc_nrf52832_xxab_s332.ld  gcc_nrf52840_xxaa_nosd.ld  gcc_startup_nrf52.S  gcc_startup_nrf52810.S  gcc_startup_nrf52840.S  gdbinit  nrf52_common.ld  nrf52_named_sections.ld
examples/ble_central/ble_app_blinky_c/: CMakeLists.txt
examples/ble_central/ble_app_uart_c/: CMakeLists.txt
examples/ble_peripheral/ble_app_blinky/: CMakeLists.txt
examples/ble_peripheral/ble_app_hrs_freertos/: CMakeLists.txt
examples/ble_peripheral/ble_app_uart/: CMakeLists.txt
examples/peripheral/blinky/: CMakeLists.txt
examples/peripheral/blinky_freertos/: CMakeLists.txt
examples/peripheral/blinky_rtc_freertos/: CMakeLists.txt
examples/peripheral/blinky_systick/: CMakeLists.txt
examples/peripheral/bsp/: CMakeLists.txt
examples/peripheral/cli/: CMakeLists.txt  main.c
examples/peripheral/csense/: CMakeLists.txt
examples/peripheral/csense_drv/: CMakeLists.txt
examples/peripheral/fatfs/: CMakeLists.txt
examples/peripheral/flash_fds/: CMakeLists.txt
examples/peripheral/flash_fstorage/: CMakeLists.txt
examples/peripheral/flashwrite/: CMakeLists.txt
examples/peripheral/fpu_fft/: CMakeLists.txt
examples/peripheral/gfx/: CMakeLists.txt  main.c
examples/peripheral/gpiote/: CMakeLists.txt
examples/peripheral/i2s/: CMakeLists.txt
examples/peripheral/led_softblink/: CMakeLists.txt
examples/peripheral/low_power_pwm/: CMakeLists.txt
examples/peripheral/lpcomp/: CMakeLists.txt
examples/peripheral/pin_change_int/: CMakeLists.txt
examples/peripheral/ppi/: CMakeLists.txt
examples/peripheral/pwm_driver/: CMakeLists.txt
examples/peripheral/pwm_library/: CMakeLists.txt
examples/peripheral/pwr_mgmt/: CMakeLists.txt
examples/peripheral/qdec/: CMakeLists.txt
examples/peripheral/qspi/: CMakeLists.txt
examples/peripheral/ram_retention/: CMakeLists.txt
examples/peripheral/rng/: CMakeLists.txt
examples/peripheral/rtc/: CMakeLists.txt
examples/peripheral/saadc/: CMakeLists.txt
examples/peripheral/serial/: CMakeLists.txt
examples/peripheral/simple_timer/: CMakeLists.txt
examples/peripheral/spi/: CMakeLists.txt
examples/peripheral/spi_master_using_nrf_spi_mngr/: CMakeLists.txt
examples/peripheral/spis/: CMakeLists.txt
examples/peripheral/temperature/: CMakeLists.txt
examples/peripheral/template_project/: CMakeLists.txt
examples/peripheral/timer/: CMakeLists.txt
examples/peripheral/twi_master_with_twis_slave/: CMakeLists.txt
examples/peripheral/twi_scanner/: CMakeLists.txt
